# RealEstateAgent

./: README.md  pyproject.toml  requirements.txt
realestateagent/: agent.py  llm.py  pandasEngine.py  pandasUpload.py
realestateagent/model/: config.json
