[tool.poetry]
name = "realestateagent"
version = "0.1.0"
description = ""
authors = ["drakkola <debbichi1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.48.post1"
pandas = "^2.2.2"
llama-index-llms-mistralai = "^0.1.16"
llama-index-experimental = "^0.1.3"
streamlit = "^1.36.0"
streamlit-chat = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
